--- a/apps/mysite-frontend/src/app/app.html
+++ b/apps/mysite-frontend/src/app/app.html
@@ -1,4 +1,18 @@
-<div class="card bg-base-100 w-96 shadow-lg m-3">
+<div class="flex flex-col min-h-screen">
+  <mysite-navbar />
+  <div class="container mx-auto grow h-full flex flex-col items-center justify-center">
+    <div class="mx-5">
+      <fa-icon [icon]="['fas', 'truck-fast']" size="3x"></fa-icon>
+      <h6 class="text-2xl font-semibold">Coming soon ...</h6>
+    </div>
+    <router-outlet></router-outlet>
+  </div>
+  <mysite-footer />
+</div>
+
+
+
+<!-- <div class="card bg-base-100 w-96 shadow-lg m-3">
   <figure>
     <img
       src="https://img.daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.webp"
@@ -12,4 +26,4 @@
     </div>
   </div>
 </div>
-<fa-icon [icon]="['fas','user']"></fa-icon>
+<fa-icon [icon]="['fas','user']"></fa-icon> -->
