--- a/apps/mysite-frontend/src/app/layout/footer.html
+++ b/apps/mysite-frontend/src/app/layout/footer.html
@@ -1,45 +1,50 @@
-<footer class="footer bg-slate-100 border-2 border-t text-base-content p-10">
-  <nav>
-    <h6 class="footer-title">Help</h6>
-    <a href="#" class="link link-hover">Shipping</a>
-    <a href="#" class="link link-hover">Returns + Exchanges</a>
-    <a href="#" class="link link-hover">FAQ</a>
-    <a href="#" class="link link-hover">Compare</a>
-  </nav>
-  <nav>
-    <h6 class="footer-title">Company</h6>
-    <a href="#" class="link link-hover">About us</a>
-    <a href="#" class="link link-hover">Contact</a>
-    <a href="#" class="link link-hover">Jobs</a>
-    <a href="#" class="link link-hover">Press kit</a>
-  </nav>
-  <nav>
-    <h6 class="footer-title">Legal</h6>
-    <a href="#" class="link link-hover">Terms of use</a>
-    <a href="#" class="link link-hover">Privacy policy</a>
-    <a href="#" class="link link-hover">Cookie policy</a>
-  </nav>
-</footer>
-<footer class="footer bg-slate-200 text-base-content px-10 py-4">
-  <aside class="grid-flow-col items-center">
-    <fa-icon class="pe-3" [icon]="['fas', 'truck-fast']" size="3x"></fa-icon>
-    <p>
-      MKopp.Dev
-      <br/>
-      Providing Ecommerce solutions
-    </p>
-  </aside>
-  <nav class="md:place-self-center md:justify-self-end">
-    <div class="grid grid-flow-col gap-4">
-      <a href="#" aria-label="Twitter shop">
-        <fa-icon [icon]="['fab', 'twitter']" size="2x"></fa-icon>
-      </a>
-      <a href="#" aria-label="Youtube shop">
-        <fa-icon [icon]="['fab', 'youtube']" size="2x"></fa-icon>
-      </a>
-      <a href="#" aria-label="Facebook shop">
-        <fa-icon [icon]="['fab', 'facebook']" size="2x"></fa-icon>
-      </a>
-    </div>
-  </nav> 
-</footer>
+<div class="bg-base-200 flex justify-center">
+  <footer class="ms-5 md:w-[80%] lg:w-[60%] footer text-base-content p-6 grid grid-cols-3">
+    <nav>
+      <h6 class="footer-title">Help</h6>
+      <a href="#" class="link link-hover">Shipping</a>
+      <a href="#" class="link link-hover">Returns + Exchanges</a>
+      <a href="#" class="link link-hover">FAQ</a>
+      <a href="#" class="link link-hover">Compare</a>
+    </nav>
+    <nav>
+      <h6 class="footer-title">Company</h6>
+      <a href="#" class="link link-hover">About us</a>
+      <a href="#" class="link link-hover">Contact</a>
+      <a href="#" class="link link-hover">Jobs</a>
+      <a href="#" class="link link-hover">Press kit</a>
+    </nav>
+    <nav>
+      <h6 class="footer-title">Legal</h6>
+      <a href="#" class="link link-hover">Terms of use</a>
+      <a href="#" class="link link-hover">Privacy policy</a>
+      <a href="#" class="link link-hover">Cookie policy</a>
+    </nav>
+  </footer>
+</div>
+
+<div class="bg-base-300 flex justify-center">
+  <footer class="md:w-[80%] lg:w-[60%] footer text-base-content px-10 py-4">
+    <aside class="grid-flow-col place-self-center md:justify-self-start">
+      <fa-icon class="pe-3" [icon]="['fas', 'truck-fast']" size="3x"></fa-icon>
+      <p>
+        MKopp.Dev
+        <br />
+        Providing Ecommerce solutions
+      </p>
+    </aside>
+    <nav class="place-self-center md:justify-self-end">
+      <div class="grid grid-flow-col gap-4">
+        <a href="#" aria-label="Twitter">
+          <fa-icon [icon]="['fab', 'twitter']" size="2x"></fa-icon>
+        </a>
+        <a href="#" aria-label="Youtube">
+          <fa-icon [icon]="['fab', 'youtube']" size="2x"></fa-icon>
+        </a>
+        <a href="#" aria-label="Facebook">
+          <fa-icon [icon]="['fab', 'facebook']" size="2x"></fa-icon>
+        </a>
+      </div>
+    </nav>
+  </footer>
+</div>
