--- a/apps/mysite-frontend/src/app/layout/navbar.html
+++ b/apps/mysite-frontend/src/app/layout/navbar.html
@@ -1,50 +1,82 @@
-<div class="navbar bg-base-100 bg-slate-100">
-    <div class="navbar-start">
-        <div class="dropdown">
-            <a class="btn btn-ghost text-xl">
-                <div class="border-1 p-2 rounded-xl" routerLink="/">MKopp.Dev</div>
-            </a>
-        </div>
-    </div>
-    <div class="navbar-center flex">
-        <ul class="menu menu-sm sm:menu-lg menu-horizontal px-1">
-            <li><a class="btn btn-ghost" routerLink="/">Home</a></li>
-            <li>
-                <details #moreMenu>
-                    <summary>More</summary>
-                    <ul class="z-30 shadow">
-                        <li><a class="btn btn-ghost" routerLink="/blog">Blog</a></li>
-                    </ul>
-                </details>
-            </li>
-            <li>
-                <details #adminMenu>
-                    <summary>Admin</summary>
-                    <ul class="z-30 shadow">
-                        <li><a class="btn btn-ghost" routerLink="/admin/dashboard">Dashboard</a></li>
-                        <li><a class="btn btn-ghost" routerLink="/admin/users">Users</a></li>
-                    </ul>
-                </details>
-            </li>
-            <li><a class="btn btn-ghost" routerLink="/blog">Blog</a></li>
-            <li><a class="btn btn-ghost" routerLink="/projects">Projects</a></li>
-            <li><a class="btn btn-ghost" routerLink="/about">About Me</a></li>
-            <li><a class="btn btn-ghost" routerLink="/contact">Contact</a></li>
-        </ul>
-    </div>
-    <div class="navbar-end pe-4 flex align-items-center">
-        <div class="dropdown dropdown-end pe-4">
-            <div tabindex="0" role="button">
-                <fa-icon [icon]="['fas', 'user']" class="menu-icon"></fa-icon>
+<div class="bg-base-200 items-center">
+    <div class="navbar md:w-[90%] lg:w-[80%] mx-auto">
+        <div class="navbar-start">
+            <div class="dropdown lg:hidden">
+                <div tabIndex="0" role="button" class="btn btn-ghost">
+                    <fa-icon [icon]="faBars" size="xs" class="menu-icon"></fa-icon>
+                </div>
+                <ul tabIndex="0" class="menu menu-sm dropdown-content bg-base-100 rounded-box z-1 mt-3 w-52 p-2 shadow">
+                    <li><a>Item 1</a></li>
+                    <li>
+                        <a>Parent</a>
+                        <ul class="p-2">
+                            <li><a>Submenu 1</a></li>
+                            <li><a>Submenu 2</a></li>
+                        </ul>
+                    </li>
+                    <li><a>Item 3</a></li>
+                </ul>
             </div>
-            <ul class="dropdown-content menu menu-lg bg-base-100 rounded-box z-10 w-52 p-2 shadow">
-                <li><a class="link">Login</a></li>
+            <a class="btn btn-ghost text-xl text-primary font-bold" routerLink="/">MKopp.Dev</a>
+        </div>
+        <div class="navbar-center hidden lg:flex">
+            <ul class="menu menu-sm sm:menu-lg menu-horizontal px-1 items-center">
+                <li><a class="btn btn-ghost flex place-self-center" routerLink="/">Home</a></li>
+                <li>
+                    <details #moreMenu>
+                        <summary class="btn btn-ghost">More</summary>
+                        <ul class="z-30 shadow">
+                            <li><a class="btn btn-ghost" routerLink="/blog">Blog</a></li>
+                        </ul>
+                    </details>
+                </li>
+                <li>
+                    <details #adminMenu>
+                        <summary class="btn btn-ghost">Admin</summary>
+                        <ul class="z-30 shadow">
+                            <li><a class="btn btn-ghost" routerLink="/admin/dashboard">Dashboard</a></li>
+                            <li><a class="btn btn-ghost" routerLink="/admin/users">Users</a></li>
+                        </ul>
+                    </details>
+                </li>
+                <li><a class="btn-ghost btn" routerLink="/blog">Blog</a></li>
+                <li><a class="btn btn-ghost" routerLink="/projects">Projects</a></li>
+                <li><a class="btn btn-ghost" routerLink="/about">About Me</a></li>
+                <li><a class="btn btn-ghost" routerLink="/contact">Contact</a></li>
             </ul>
-        </div>        
-        <div class="dropdown dropdown-end me-4" routerLink="/cart">
+        </div>
+        <div class="navbar-end pe-4 flex gap-2">
+            <label class="swap swap-rotate items-center">
+                <!-- this hidden checkbox controls the state -->
+                <input type="checkbox" class="theme-controller" value="halloween" />
+
+                <!-- sun icon -->
+                <svg class="menu-icon swap-off h-7 w-7 fill-current" xmlns="http://www.w3.org/2000/svg"
+                    viewBox="0 0 24 24">
+                    <path
+                        d="M5.64,17l-.71.71a1,1,0,0,0,0,1.41,1,1,0,0,0,1.41,0l.71-.71A1,1,0,0,0,5.64,17ZM5,12a1,1,0,0,0-1-1H3a1,1,0,0,0,0,2H4A1,1,0,0,0,5,12Zm7-7a1,1,0,0,0,1-1V3a1,1,0,0,0-2,0V4A1,1,0,0,0,12,5ZM5.64,7.05a1,1,0,0,0,.7.29,1,1,0,0,0,.71-.29,1,1,0,0,0,0-1.41l-.71-.71A1,1,0,0,0,4.93,6.34Zm12,.29a1,1,0,0,0,.7-.29l.71-.71a1,1,0,1,0-1.41-1.41L17,5.64a1,1,0,0,0,0,1.41A1,1,0,0,0,17.66,7.34ZM21,11H20a1,1,0,0,0,0,2h1a1,1,0,0,0,0-2Zm-9,8a1,1,0,0,0-1,1v1a1,1,0,0,0,2,0V20A1,1,0,0,0,12,19ZM18.36,17A1,1,0,0,0,17,18.36l.71.71a1,1,0,0,0,1.41,0,1,1,0,0,0,0-1.41ZM12,6.5A5.5,5.5,0,1,0,17.5,12,5.51,5.51,0,0,0,12,6.5Zm0,9A3.5,3.5,0,1,1,15.5,12,3.5,3.5,0,0,1,12,15.5Z" />
+                </svg>
+
+                <!-- moon icon -->
+                <svg class="menu-icon swap-on h-7 w-7 fill-current" xmlns="http://www.w3.org/2000/svg"
+                    viewBox="0 0 24 24">
+                    <path
+                        d="M21.64,13a1,1,0,0,0-1.05-.14,8.05,8.05,0,0,1-3.37.73A8.15,8.15,0,0,1,9.08,5.49a8.59,8.59,0,0,1,.25-2A1,1,0,0,0,8,2.36,10.14,10.14,0,1,0,22,14.05,1,1,0,0,0,21.64,13Zm-9.5,6.69A8.14,8.14,0,0,1,7.08,5.22v.27A10.15,10.15,0,0,0,17.22,15.63a9.79,9.79,0,0,0,2.1-.22A8.11,8.11,0,0,1,12.14,19.73Z" />
+                </svg>
+            </label>
+            <div class="dropdown dropdown-end pe-4">
+                <div tabindex="0" role="button">
+                    <fa-icon [icon]="['fas', 'user']" size="xs" class="menu-icon"></fa-icon>
+                </div>
+                <ul class="dropdown-content menu menu-lg bg-base-100 rounded-box z-10 w-52 p-2 shadow">
+                    <li><a class="link">Login</a></li>
+                </ul>
+            </div>
+            <!-- <div class="dropdown dropdown-end me-4" routerLink="/cart">
             <div tabindex="0" role="button">
                 <fa-icon [icon]="['fas', 'cart-shopping']" class="menu-icon"></fa-icon>
             </div>
+        </div> -->
         </div>
     </div>
 </div>
@@ -52,13 +84,10 @@
 <!-- <div class="navbar bg-base-100 shadow-sm">
     <div class="navbar-start">
         <div class="dropdown">
-            <div tabIndex={0} role="button" class="btn btn-ghost lg:hidden">
-                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
-                    stroke="currentColor">
-                    <path strokeLinecap="round" strokeLinejoin="round" strokeWidth="2" d="M4 6h16M4 12h8m-8 6h16" />
-                </svg>
+            <div tabIndex="0" role="button" class="btn btn-ghost lg:hidden">
+                <fa-icon [icon]="faBars" size="xs" class="menu-icon"></fa-icon>
             </div>
-            <ul tabIndex={0} class="menu menu-sm dropdown-content bg-base-100 rounded-box z-1 mt-3 w-52 p-2 shadow">
+            <ul tabIndex="0" class="menu menu-sm dropdown-content bg-base-100 rounded-box z-1 mt-3 w-52 p-2 shadow">
                 <li><a>Item 1</a></li>
                 <li>
                     <a>Parent</a>
