add border-box, change responsive layout incl. main color

--- a/apps/mysite-frontend/src/app/layout/footer.html
+++ b/apps/mysite-frontend/src/app/layout/footer.html
@@ -1,20 +1,20 @@
 <div class="bg-base-200 flex justify-center">
-  <footer class="ms-5 md:w-[80%] lg:w-[60%] footer text-base-content p-6 grid grid-cols-3">
-    <nav>
+  <footer class="ms-5 me-0 md:ms-10 lg:mx-auto max-w-[1024px] footer text-base-content p-6 grid grid-cols-3">
+    <nav class="md:ps-10 lg:ps-20">
       <h6 class="footer-title">Help</h6>
       <a href="#" class="link link-hover">Shipping</a>
       <a href="#" class="link link-hover">Returns + Exchanges</a>
       <a href="#" class="link link-hover">FAQ</a>
       <a href="#" class="link link-hover">Compare</a>
     </nav>
-    <nav>
+    <nav class="md:ps-10 lg:ps-20">
       <h6 class="footer-title">Company</h6>
       <a href="#" class="link link-hover">About us</a>
       <a href="#" class="link link-hover">Contact</a>
       <a href="#" class="link link-hover">Jobs</a>
       <a href="#" class="link link-hover">Press kit</a>
     </nav>
-    <nav>
+    <nav class="md:ps-10 lg:ps-20">
       <h6 class="footer-title">Legal</h6>
       <a href="#" class="link link-hover">Terms of use</a>
       <a href="#" class="link link-hover">Privacy policy</a>
@@ -23,8 +23,9 @@
   </footer>
 </div>
 
-<div class="bg-base-300 flex justify-center">
-  <footer class="md:w-[80%] lg:w-[60%] footer text-base-content px-10 py-4">
+<div class="bg-base-300 flex">
+  <footer
+    class=" md:w-[100%] md:mx-auto lg:max-w-[1024px] lg:justify-between footer text-base-content px-10 lg:px-5 xl:px-0 py-4">
     <aside class="grid-flow-col place-self-center md:justify-self-start">
       <fa-icon class="pe-3" [icon]="['fas', 'truck-fast']" size="3x"></fa-icon>
       <p>
