--- a/apps/mysite-frontend/src/app/layout/navbar.html
+++ b/apps/mysite-frontend/src/app/layout/navbar.html
@@ -1,5 +1,5 @@
 <div class="bg-base-200 items-center">
-    <div class="navbar md:w-[90%] lg:w-[80%] mx-auto">
+    <div class="navbar md:mx-auto lg:w-[1024px] lg:justify-center">
         <div class="navbar-start">
             <div class="dropdown lg:hidden">
                 <div tabIndex="0" role="button" class="btn btn-ghost">
@@ -45,7 +45,7 @@
                 <li><a class="btn btn-ghost" routerLink="/contact">Contact</a></li>
             </ul>
         </div>
-        <div class="navbar-end pe-4 flex gap-2">
+        <div class="navbar-end flex gap-2">
             <label class="swap swap-rotate items-center">
                 <!-- this hidden checkbox controls the state -->
                 <input type="checkbox" class="theme-controller" value="halloween" />
