adept footer and navbar, add social links

--- a/apps/mysite-frontend/src/app/layout/navbar.html
+++ b/apps/mysite-frontend/src/app/layout/navbar.html
@@ -17,7 +17,8 @@
                     <li><a>Item 3</a></li>
                 </ul>
             </div>
-            <a class="btn btn-ghost text-xl text-primary font-bold" routerLink="/">MKopp.Dev</a>
+            <!-- hover:bg-secondary hover:text-neutral -->
+            <a class="btn btn-ghost text-2xl text-primary hover:bg-base-300 font-bold" routerLink="/">MKopp.Dev</a>
         </div>
         <div class="navbar-center hidden lg:flex">
             <ul class="menu menu-sm sm:menu-lg menu-horizontal px-1 items-center">
