--- a/apps/mysite-frontend/src/app/layout/footer.html
+++ b/apps/mysite-frontend/src/app/layout/footer.html
@@ -1,24 +1,22 @@
 <div class="bg-base-200 flex justify-center">
-  <footer class="ms-5 me-0 md:ms-10 lg:mx-auto max-w-[1024px] footer text-base-content p-6 grid grid-cols-3">
-    <nav class="md:ps-10 lg:ps-20">
-      <h6 class="footer-title">Help</h6>
-      <a href="#" class="link link-hover">Shipping</a>
-      <a href="#" class="link link-hover">Returns + Exchanges</a>
-      <a href="#" class="link link-hover">FAQ</a>
-      <a href="#" class="link link-hover">Compare</a>
+  <footer class="ms-5 me-0 md:ms-10 lg:mx-auto max-w-[500px] footer text-base-content p-6 grid grid-cols-2">
+    <nav class="md:ps-10 lg:ps-20" aria-label="Navigate">
+      <h6 class="footer-title">Navigate</h6>
+      <a routerLink="/" class="link link-hover">Home</a>
+      <a routerLink="/projects" class="link link-hover">Projects</a>
+      <a routerLink="/blog" class="link link-hover">Blog</a>
+      <a routerLink="/about" class="link link-hover">About</a>
+      <a routerLink="/contact" class="link link-hover">Contact</a>
     </nav>
-    <nav class="md:ps-10 lg:ps-20">
-      <h6 class="footer-title">Company</h6>
-      <a href="#" class="link link-hover">About us</a>
-      <a href="#" class="link link-hover">Contact</a>
-      <a href="#" class="link link-hover">Jobs</a>
-      <a href="#" class="link link-hover">Press kit</a>
-    </nav>
-    <nav class="md:ps-10 lg:ps-20">
+    <nav class="md:ps-10 lg:ps-20" aria-label="Legal">
       <h6 class="footer-title">Legal</h6>
-      <a href="#" class="link link-hover">Terms of use</a>
-      <a href="#" class="link link-hover">Privacy policy</a>
-      <a href="#" class="link link-hover">Cookie policy</a>
+      <!-- AGB -->
+      <!-- Nutzungsbedingungen -->
+      <a routerLink="/terms" class="link link-hover">Terms of Use</a>
+      <!-- Impressum -->
+      <!-- Datenschutz -->
+      <a routerLink="/privacy" class="link link-hover">Privacy Policy</a>
+      <a routerLink="/cookie" class="link link-hover">Cookie Policy</a>
     </nav>
   </footer>
 </div>
@@ -26,24 +24,25 @@
 <div class="bg-base-300 flex">
   <footer
     class=" md:w-[100%] md:mx-auto lg:max-w-[1024px] lg:justify-between footer text-base-content px-10 lg:px-5 xl:px-0 py-4">
-    <aside class="grid-flow-col place-self-center md:justify-self-start">
-      <fa-icon class="pe-3" [icon]="['fas', 'truck-fast']" size="3x"></fa-icon>
+    <aside class="grid-flow-col place-self-center md:justify-self-start items-center font-semibold">
+      <fa-icon class="pe-3" [icon]="['far', 'copyright']" size="2x"></fa-icon>
       <p>
         MKopp.Dev
         <br />
-        Providing Ecommerce solutions
+        Software Development & Tech
       </p>
     </aside>
-    <nav class="place-self-center md:justify-self-end">
+    <nav class="place-self-center md:justify-self-end" aria-label="Social media links">
       <div class="grid grid-flow-col gap-4">
-        <a href="#" aria-label="Twitter">
-          <fa-icon [icon]="['fab', 'twitter']" size="2x"></fa-icon>
+        <a href="https://github.com/michaeljgkopp" target="_blank" rel="noopener noreferrer" aria-label="GitHub">
+          <fa-icon [icon]="['fab', 'github']" size="2x"></fa-icon>
         </a>
-        <a href="#" aria-label="Youtube">
-          <fa-icon [icon]="['fab', 'youtube']" size="2x"></fa-icon>
+        <a href="https://www.linkedin.com/in/michaeljgkopp" target="_blank" rel="noopener noreferrer"
+          aria-label="LinkedIn">
+          <fa-icon [icon]="['fab', 'linkedin']" size="2x"></fa-icon>
         </a>
-        <a href="#" aria-label="Facebook">
-          <fa-icon [icon]="['fab', 'facebook']" size="2x"></fa-icon>
+        <a href="mailto:contact@mkopp.dev" aria-label="Email">
+          <fa-icon [icon]="['fas', 'envelope']" size="2x"></fa-icon>
         </a>
       </div>
     </nav>
