Add logo and favicon in various sizes/types for compatibility

--- a/apps/mysite-frontend/src/app/layout/footer.html
+++ b/apps/mysite-frontend/src/app/layout/footer.html
@@ -21,11 +21,12 @@
   </footer>
 </div>
 
-<div class="bg-base-300 flex">
+<div class="bg-base-300">
   <footer
     class=" md:w-[100%] md:mx-auto lg:max-w-[1024px] lg:justify-between footer text-base-content px-10 lg:px-5 xl:px-0 py-4">
-    <aside class="grid-flow-col place-self-center md:justify-self-start items-center font-semibold">
-      <fa-icon class="pe-3" [icon]="['far', 'copyright']" size="2x"></fa-icon>
+    <aside class="grid-flow-col place-self-center md:justify-self-start items-center font-semibold"
+      aria-label="Site branding and description">
+      <fa-icon class="pe-3" [icon]="['fas', 'code']" size="2x"></fa-icon>
       <p>
         MKopp.Dev
         <br />
