--- a/apps/mysite-frontend/src/app/layout/navbar.html
+++ b/apps/mysite-frontend/src/app/layout/navbar.html
@@ -17,8 +17,10 @@
                     <li><a>Item 3</a></li>
                 </ul>
             </div>
-            <!-- hover:bg-secondary hover:text-neutral -->
-            <a class="btn btn-ghost text-2xl text-primary hover:bg-base-300 font-bold" routerLink="/">MKopp.Dev</a>
+            <a class="btn btn-ghost text-2xl text-primary hover:bg-base-300 font-bold" routerLink="/">
+                MKopp.Dev
+                <!-- <app-logo width="2.5rem" height="2.5em"></app-logo> -->
+            </a>
         </div>
         <div class="navbar-center hidden lg:flex">
             <ul class="menu menu-sm sm:menu-lg menu-horizontal px-1 items-center">
