feat: FE toast service update: BE cors config & keycloak settings

--- a/apps/mysite-frontend/src/app/app.html
+++ b/apps/mysite-frontend/src/app/app.html
@@ -1,3 +1,5 @@
+<mysite-toast />
+
 <div class="flex flex-col min-h-screen">
   <mysite-navbar />
   <div class="container mx-auto grow h-full flex flex-col items-center justify-center">
@@ -9,21 +11,3 @@
   </div>
   <mysite-footer />
 </div>
-
-
-
-<!-- <div class="card bg-base-100 w-96 shadow-lg m-3">
-  <figure>
-    <img
-      src="https://img.daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.webp"
-      alt="Shoes" />
-  </figure>
-  <div class="card-body">
-    <h2 class="card-title">Card Title</h2>
-    <p>A card component has a figure, a body part, and inside body there are title and actions parts</p>
-    <div class="card-actions justify-end">
-      <button class="btn btn-primary">Buy Now</button>
-    </div>
-  </div>
-</div>
-<fa-icon [icon]="['fas','user']"></fa-icon> -->
