--- a/apps/mysite-frontend/src/app/layout/navbar.html
+++ b/apps/mysite-frontend/src/app/layout/navbar.html
@@ -19,7 +19,7 @@
             </div>
             <a class="btn btn-ghost text-2xl text-primary hover:bg-base-300 font-bold" routerLink="/">
                 MKopp.Dev
-                <!-- <app-logo width="2.5rem" height="2.5em"></app-logo> -->
+                <!-- <mysite-logo width="2.5rem" height="2.5em"></mysite-logo> -->
             </a>
         </div>
         <div class="navbar-center hidden lg:flex">
