--- a/apps/mysite-frontend/src/app/app.html
+++ b/apps/mysite-frontend/src/app/app.html
@@ -1,6 +1,6 @@
 <mysite-toast />
 
-<div class="flex flex-col min-h-screen">
+<div class="flex flex-col min-h-screen overflow-x-hidden">
   <mysite-navbar />
   <div class="container mx-auto grow h-full flex flex-col items-center justify-center">
     <router-outlet></router-outlet>
