--- a/apps/mysite-frontend/src/app/layout/navbar.html
+++ b/apps/mysite-frontend/src/app/layout/navbar.html
@@ -1,4 +1,4 @@
-<div class="bg-base-200 items-center sticky top-0 z-50 w-screen">
+<div class="bg-base-200 items-center sticky top-0 z-50">
     <div class="navbar md:mx-auto lg:w-[1024px] lg:justify-center">
         <div class="navbar-start">
             <div class="dropdown lg:hidden">
