--- a/apps/mysite-frontend/src/app/blog/components/post-card/post-card.component.html
+++ b/apps/mysite-frontend/src/app/blog/components/post-card/post-card.component.html
@@ -16,7 +16,7 @@
     @if (post.tags.length > 0) {
     <div class="flex flex-wrap gap-2 mt-2">
       @for (tag of post.tags; track tag) {
-      <span class="badge badge-primary badge-sm">
+      <span class="badge badge-primary badge-md lg:badge-lg" [class.badge-outline]="isDarkMode()">
         <fa-icon [icon]="faTag" size="xs" class="mr-1"></fa-icon>
         {{ tag }}
       </span>
