--- a/apps/mysite-frontend/src/app/blog/blog-list/blog-list.component.html
+++ b/apps/mysite-frontend/src/app/blog/blog-list/blog-list.component.html
@@ -6,21 +6,15 @@
     </p>
   </header>
 
-  @if (loading()) {
-  <div class="flex justify-center items-center min-h-[400px]">
-    <span class="loading loading-spinner loading-lg"></span>
-  </div>
-  } @else {
-  <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
-    @for (post of posts(); track post.slug) {
-    <mysite-post-card [post]="post"></mysite-post-card>
-    }
-  </div>
-
-  @if (posts().length === 0) {
+  @if (posts.length === 0) {
   <div class="alert alert-info">
     <span>No blog posts found. Check back soon!</span>
   </div>
-  }
+  } @else {
+  <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
+    @for (post of posts; track post.slug) {
+    <mysite-post-card [post]="post"></mysite-post-card>
+    }
+  </div>
   }
 </div>
