--- a/apps/mysite-frontend/src/app/layout/navbar.html
+++ b/apps/mysite-frontend/src/app/layout/navbar.html
@@ -6,15 +6,11 @@
                     <fa-icon [icon]="faBars" size="xs" class="menu-icon"></fa-icon>
                 </div>
                 <ul tabIndex="0" class="menu menu-sm dropdown-content bg-base-100 rounded-box z-1 mt-3 w-52 p-2 shadow">
-                    <li><a>Item 1</a></li>
-                    <li>
-                        <a>Parent</a>
-                        <ul class="p-2">
-                            <li><a>Submenu 1</a></li>
-                            <li><a>Submenu 2</a></li>
-                        </ul>
-                    </li>
-                    <li><a>Item 3</a></li>
+                    <li><a routerLink="/">Home</a></li>
+                    <li><a routerLink="/blog">Blog</a></li>
+                    <li><a href="https://github.com/MichaelJGKopp/mkopp.dev" target="_blank" rel="noopener noreferrer">GitHub</a></li>
+                    <li><a href="https://github.com/MichaelJGKopp/mkopp.dev/blob/main/docs" target="_blank" rel="noopener noreferrer">Documentation</a></li>
+                    <li><a href="https://github.com/MichaelJGKopp/mkopp.dev/issues" target="_blank" rel="noopener noreferrer">Issues</a></li>
                 </ul>
             </div>
             <a class="btn btn-ghost text-2xl text-primary hover:bg-base-300 font-bold" routerLink="/">
@@ -25,27 +21,17 @@
         <div class="navbar-center hidden lg:flex">
             <ul class="menu menu-sm sm:menu-lg menu-horizontal px-1 items-center">
                 <li><a class="btn btn-ghost flex place-self-center" routerLink="/">Home</a></li>
-                <li>
-                    <details #moreMenu>
-                        <summary class="btn btn-ghost">More</summary>
-                        <ul class="z-30 shadow">
-                            <li><a class="btn btn-ghost" routerLink="/blog">Blog</a></li>
-                        </ul>
-                    </details>
-                </li>
-                <li>
-                    <details #adminMenu>
-                        <summary class="btn btn-ghost">Admin</summary>
-                        <ul class="z-30 shadow">
-                            <li><a class="btn btn-ghost" routerLink="/admin/dashboard">Dashboard</a></li>
-                            <li><a class="btn btn-ghost" routerLink="/admin/users">Users</a></li>
-                        </ul>
-                    </details>
-                </li>
                 <li><a class="btn-ghost btn" routerLink="/blog">Blog</a></li>
-                <li><a class="btn btn-ghost" routerLink="/projects">Projects</a></li>
-                <li><a class="btn btn-ghost" routerLink="/about">About Me</a></li>
-                <li><a class="btn btn-ghost" routerLink="/contact">Contact</a></li>
+                <li>
+                    <details #resourcesMenu>
+                        <summary class="btn btn-ghost">Resources</summary>
+                        <ul class="z-30 shadow">
+                            <li><a class="btn btn-ghost" href="https://github.com/MichaelJGKopp/mkopp.dev" target="_blank" rel="noopener noreferrer">GitHub Repository</a></li>
+                            <li><a class="btn btn-ghost" href="https://github.com/MichaelJGKopp/mkopp.dev/blob/main/docs" target="_blank" rel="noopener noreferrer">Documentation</a></li>
+                            <li><a class="btn btn-ghost" href="https://github.com/MichaelJGKopp/mkopp.dev/issues" target="_blank" rel="noopener noreferrer">Issue Tracker</a></li>
+                        </ul>
+                    </details>
+                </li>
             </ul>
         </div>
         <div class="navbar-end flex gap-2">
