feat: FE comment implementation + likes

--- a/apps/mysite-frontend/src/app/blog/blog-list/blog-list.component.html
+++ b/apps/mysite-frontend/src/app/blog/blog-list/blog-list.component.html
@@ -12,7 +12,7 @@
   </div>
   } @else {
   <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
-    @for (post of posts; track post.slug) {
+    @for (post of posts; track post.id) {
     <mysite-post-card [post]="post"></mysite-post-card>
     }
   </div>
