feat: sticky navbar/toast, login/out page reset, fix: comment like ui

--- a/apps/mysite-frontend/src/app/app.html
+++ b/apps/mysite-frontend/src/app/app.html
@@ -2,7 +2,7 @@
 
 <div class="flex flex-col min-h-screen overflow-x-hidden">
   <mysite-navbar />
-  <div class="container mx-auto grow h-full flex flex-col items-center justify-center">
+  <div class="container mx-auto grow h-full flex flex-col items-center justify-center pt-16">
     <router-outlet></router-outlet>
   </div>
   <mysite-footer />
