--- a/apps/mysite-frontend/src/app/blog/components/post-detail/post-detail.component.html
+++ b/apps/mysite-frontend/src/app/blog/components/post-detail/post-detail.component.html
@@ -31,7 +31,7 @@
       @if (post()!.tags) {
       <div class="flex flex-wrap gap-2">
         @for (tag of post()!.tags; track tag) {
-        <span class="badge badge-primary badge-outline badge-md lg:badge-lg" [class.font-bold]="!isDarkMode()">
+        <span class="badge badge-primary badge-outline badge-md lg:badge-lg" [class.font-semibold]="!isDarkMode()">
           <fa-icon [icon]="faTag" size="xs" class="mr-1"></fa-icon>
           {{ tag }}
         </span>
