--- a/apps/mysite-frontend/src/app/shared/toast/toast.component.html
+++ b/apps/mysite-frontend/src/app/shared/toast/toast.component.html
@@ -1,7 +1,7 @@
-<!-- Toast Container - Fixed position at top-right -->
-<div class="toast toast-top toast-end z-50">
+<!-- Toast Container - Fixed position below navbar -->
+<div class="fixed top-[72px] right-4 z-40 flex flex-col gap-2">
     @for (toast of toastService.toasts(); track toast) {
-    <div [class]="toast.className + ' shadow-lg'">
+    <div [class]="toast.className + ' shadow-lg min-w-[300px] max-w-md'">
         <div class="flex items-center gap-2">
             <!-- Icon based on type -->
             @switch (toast.type) {
