--- a/apps/mysite-frontend/src/app/ai-assistant/ai-toggle-button/ai-toggle-button.component.html
+++ b/apps/mysite-frontend/src/app/ai-assistant/ai-toggle-button/ai-toggle-button.component.html
@@ -1,4 +1,4 @@
-<div class="fixed bottom-6 right-6 z-40">
+<div class="fixed bottom-6 right-6 z-[59]">
     <div class="flex flex-row justify-end">
         <mysite-ai-speech-bubble />
         <button type="button" (click)="onToggle()"
