--- a/apps/mysite-frontend/src/app/layout/navbar.html
+++ b/apps/mysite-frontend/src/app/layout/navbar.html
@@ -1,4 +1,4 @@
-<div class="bg-base-200 items-center fixed top-0 left-0 right-0 z-[49] transition-transform duration-300"
+<div class="bg-base-200 items-center fixed top-0 left-0 right-0 z-30 transition-transform duration-300"
     [class.-translate-y-full]="!isNavbarVisible()">
     <div class="navbar md:mx-auto lg:w-[1024px] lg:justify-center">
         <div class="navbar-start">
@@ -6,8 +6,7 @@
                 <div tabIndex="0" role="button" class="btn btn-ghost">
                     <fa-icon [icon]="faBars" size="xs" class="menu-icon"></fa-icon>
                 </div>
-                <ul tabIndex="0"
-                    class="menu menu-lg dropdown-content bg-base-100 rounded-box mt-3 w-52 p-2 shadow z-[48]">
+                <ul tabIndex="0" class="menu menu-lg dropdown-content bg-base-100 rounded-box mt-3 w-52 p-2 shadow">
                     <li><a routerLink="/">Home</a></li>
                     <li><a routerLink="/blog">Blog</a></li>
                     <li><a href="https://github.com/MichaelJGKopp/mkopp.dev" target="_blank"
@@ -30,7 +29,7 @@
                 <li>
                     <details #resourcesMenu>
                         <summary class="btn btn-ghost">Resources</summary>
-                        <ul class="z-[48] shadow">
+                        <ul class="shadow">
                             <li><a class="btn btn-ghost" href="https://github.com/MichaelJGKopp/mkopp.dev"
                                     target="_blank" rel="noopener noreferrer">GitHub Repository</a></li>
                             <li><a class="btn btn-ghost"
@@ -67,7 +66,7 @@
                 <div tabindex="0" role="button">
                     <fa-icon [icon]="['fas', 'user']" size="xs" class="menu-icon"></fa-icon>
                 </div>
-                <ul class="dropdown-content menu menu-lg bg-base-100 rounded-box z-[48] w-52 p-2 shadow">
+                <ul class="dropdown-content menu menu-lg bg-base-100 rounded-box w-52 p-2 shadow">
                     @if (!isAuthenticated()) {
                     <li><button type="button" (click)="login()">Login</button></li>
                     } @else {
@@ -75,51 +74,6 @@
                     }
                 </ul>
             </div>
-            <!-- <div class="dropdown dropdown-end me-4" routerLink="/cart">
-            <div tabindex="0" role="button">
-                <fa-icon [icon]="['fas', 'cart-shopping']" class="menu-icon"></fa-icon>
-            </div>
-        </div> -->
         </div>
     </div>
 </div>
-
-<!-- <div class="navbar bg-base-100 shadow-sm">
-    <div class="navbar-start">
-        <div class="dropdown">
-            <div tabIndex="0" role="button" class="btn btn-ghost lg:hidden">
-                <fa-icon [icon]="faBars" size="xs" class="menu-icon"></fa-icon>
-            </div>
-            <ul tabIndex="0" class="menu menu-sm dropdown-content bg-base-100 rounded-box z-1 mt-3 w-52 p-2 shadow">
-                <li><a>Item 1</a></li>
-                <li>
-                    <a>Parent</a>
-                    <ul class="p-2">
-                        <li><a>Submenu 1</a></li>
-                        <li><a>Submenu 2</a></li>
-                    </ul>
-                </li>
-                <li><a>Item 3</a></li>
-            </ul>
-        </div>
-        <a class="btn btn-ghost text-xl">daisyUI</a>
-    </div>
-    <div class="navbar-center hidden lg:flex">
-        <ul class="menu menu-horizontal px-1">
-            <li><a>Item 1</a></li>
-            <li>
-                <details>
-                    <summary>Parent</summary>
-                    <ul class="p-2">
-                        <li><a>Submenu 1</a></li>
-                        <li><a>Submenu 2</a></li>
-                    </ul>
-                </details>
-            </li>
-            <li><a>Item 3</a></li>
-        </ul>
-    </div>
-    <div class="navbar-end">
-        <a class="btn">Button</a>
-    </div>
-</div> -->
