--- a/apps/mysite-frontend/src/app/ai-assistant/ai-panel/ai-header/ai-header.component.html
+++ b/apps/mysite-frontend/src/app/ai-assistant/ai-panel/ai-header/ai-header.component.html
@@ -1,4 +1,4 @@
-<div class="py-3 border-b border-base-300 bg-base-200 transition-transform duration-300 max-md:sticky max-md:top-0 max-md:z-10"
+<div class="pb-1 border-b border-base-300 bg-base-200 transition-transform duration-300 max-md:fixed max-md:w-full max-md:top-0"
     [class.max-md:-translate-y-full]="!isHeaderVisible">
     <div class="lg:max-w-[1024px] px-5 mx-auto flex items-center justify-between">
         <div class="flex items-center flex-1">
